force-app/main/default/objects/Scheme__c/fields/Applicability_Summary__c.field-meta.xml
<CustomField>
    <fullName>Applicability_Summary__c</fullName>
    <label>Applicability Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>