force-app/main/default/objects/Scheme__c/fields/Applicable_for__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for__c</fullName>
    <label>Not in Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>