force-app/main/default/objects/Scheme__c/fields/Applies_to__c.field-meta.xml
<CustomField>
    <fullName>Applies_to__c</fullName>
    <label>Not In Use</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Scheme_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same product</fullName>
            </value>
            <value>
                <fullName>Same Category</fullName>
            </value>
            <value>
                <fullName>Cross Product</fullName>
            </value>
            <value>
                <fullName>Cross Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>