force-app/main/default/objects/Scheme__c/fields/Apply_to_All_Areas__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_All_Areas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply to All Areas</label>
    <type>Checkbox</type>
</CustomField>