force-app/main/default/objects/Scheme__c/fields/Apply_to_All_Outlet_Categories__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_All_Outlet_Categories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply to All Outlet Categories</label>
    <type>Checkbox</type>
</CustomField>