force-app/main/default/objects/Scheme__c/fields/Apply_to_All_Territories__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_All_Territories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply to All Territories</label>
    <type>Checkbox</type>
</CustomField>