force-app/main/default/objects/Scheme__c/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <type>TextArea</type>
</CustomField>