force-app/main/default/objects/Scheme__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Not in Use</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>