force-app/main/default/objects/Scheme__c/fields/Scheme_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Product_Category__c</fullName>
    <label>Scheme Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Sub_Group</valueSetName>
    </valueSet>
</CustomField>