force-app/main/default/objects/Scheme__c/fields/Scheme_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Product Group</label>
    <referenceTo>Scheme_Product_Group__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>