force-app/main/default/objects/Scheme__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Not in Use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>